--- a/frontend/src/app/componentes/header/header.component.html
+++ b/frontend/src/app/componentes/header/header.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-        <a class="navbar-brand" routerLink="/">Inmobiliaria</a>
+        <a class="navbar-brand" routerLink="/">Inmobiliaria JGL</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
             <ul class="navbar-nav">
                 <ng-container *ngIf="authService.EstaLogueado();">
                     <li class="nav-item">
