--- a/frontend/src/app/componentes/signin/signin.component.html
+++ b/frontend/src/app/componentes/signin/signin.component.html
@@ -7,13 +7,13 @@
             <div class="card-body">
                 <div id="error_messages" class="alert alert-dismissible alert-warning" style="display: none;" role="alert"></div>
                 <form (submit)="IniciarSesion()">
-                    <div class="form-group">
+                    <div class="mb-3">
                         <input [(ngModel)]="usuario.nick" class="form-control" type="text" autocomplete="off" name="nick" id="" placeholder="Usuario" required>
                     </div>
-                    <div class="form-group">
+                    <div class="mb-3">
                         <input [(ngModel)]="usuario.contra" class="form-control" type="password" autocomplete="off" name="contra" id="" placeholder="Contraseña" required>
                     </div>
-                    <div class="form-group">
+                    <div class="mb-3">
                         <button class="btn btn-primary btn-block" type="submit">Entrar</button>
                     </div>
                 </form>
