--- a/frontend/src/app/componentes/dialogs/contrato-dialog/contrato-dialog.component.html
+++ b/frontend/src/app/componentes/dialogs/contrato-dialog/contrato-dialog.component.html
@@ -6,66 +6,78 @@
         <div class="col-4">
             <input [(ngModel)]="contratoActivo._id" class="form-control" type="hidden" name="_id" id="identificador" />
             <label class="form-label" for="txtNoContrato">N° Contrato</label>
-            <input [(ngModel)]="contratoActivo.noContrato" name="noContrato" class="form-control" type="text" id="txtNoContrato">
+            <input [attr.readonly]="data.tituloVentana === 'Detalles' ? true : null" [(ngModel)]="contratoActivo.noContrato" name="noContrato" class="form-control" type="text" id="txtNoContrato">
             
         </div>
         <div class="col-4">
             <label for="txtFInicio" class="form-label">Fecha inicio</label>
-            <input [(ngModel)]="contratoActivo.fechaInicio" name="fechaInicio" class="form-control" matInput [matDatepicker]="txtFInicio">
+            <input [attr.readonly]="data.tituloVentana === 'Detalles' ? true : null" [(ngModel)]="contratoActivo.fechaInicio" name="fechaInicio" class="form-control" matInput [matDatepicker]="txtFInicio">
             <mat-datepicker-toggle matSuffix [for]="txtFInicio"></mat-datepicker-toggle>
             <mat-datepicker #txtFInicio></mat-datepicker>
         </div>
         <div class="col-4">
             <label for="txtFCierre" class="form-label">Fecha cierre</label>
-            <input [(ngModel)]="contratoActivo.fechaCierre" name="fechaCierre" class="form-control" matInput [matDatepicker]="txtFCierre">
+            <input [attr.readonly]="data.tituloVentana === 'Detalles' ? true : null" [(ngModel)]="contratoActivo.fechaCierre" name="fechaCierre" class="form-control" matInput [matDatepicker]="txtFCierre">
             <mat-datepicker-toggle matSuffix [for]="txtFCierre"></mat-datepicker-toggle>
             <mat-datepicker #txtFCierre></mat-datepicker>
         </div>
         <div class="col-6">
-            <label for="dataListPropiedad" class="form-label">Propiedad</label>
-            <input [(ngModel)]="contratoActivo.propiedadId" name="propiedadId" class="form-control" list="opcionesPropiedad" id="dataListPropiedad" placeholder="Propiedad" autocomplete="off">
-            <datalist id="opcionesPropiedad">
-                <option *ngFor="let prop of propiedades" [value]="prop._id">
-            </datalist>
+            <label for="opcionesPropiedad" class="form-label">Propiedad</label>
+            <select [attr.disabled]="data.tituloVentana === 'Detalles' ? true : null" class="form-select" [(ngModel)]="contratoActivo.propiedad._id" name="propiedad._id" id="opcionesPropiedad">
+                <ng-container *ngIf="data.tituloVentana === 'Nuevo Contrato'; then nuevoContrato; else viendoContrato">
+                </ng-container>
+                <ng-template #nuevoContrato>
+                    <ng-container *ngFor="let prop of propiedades">
+                        <ng-container *ngIf="prop.estadoRenta === 'Disponible'">
+                            <option value="{{ prop._id }}">{{ prop.predial }}</option>
+                        </ng-container>
+                    </ng-container>
+                </ng-template>
+                <ng-template #viendoContrato>
+                    <ng-container *ngFor="let prop of propiedades">
+                            <option value="{{ prop._id }}">{{ prop.predial }}</option>
+                    </ng-container>
+                </ng-template>
+            </select>
         </div>
         <div class="col-6">
-            <label for="dataListInquilino" class="form-label">Inquilino</label>
-            <input [(ngModel)]="contratoActivo.inquilinoId" name="inquilinoId" name="inquilino" class="form-control" list="opcionesInquilino" id="dataListInquilino" placeholder="Propiedad" autocomplete="off">
-            <datalist id="opcionesInquilino">
-                <option *ngFor="let inq of inquilinos" [value]="inq._id">
-            </datalist>
+            <label for="opcionesInquilino" class="form-label">Inquilino</label>
+            <!-- <input [(ngModel)]="contratoActivo.inquilino.contacto.nombre" name="inquilino.contacto.nombre" class="form-control" list="opcionesInquilino" id="dataListInquilino" placeholder="Inquilino" autocomplete="off"> -->
+            <select [attr.disabled]="data.tituloVentana === 'Detalles' ? true : null" class="form-select" [(ngModel)]="contratoActivo.inquilino._id" name="inquilino._id" id="opcionesInquilino">
+                <option *ngFor="let inq of inquilinos" value="{{ inq._id }}">{{ inq.contacto.nombre + ' ' + inq.contacto.apellidos }}</option>
+            </select>
         </div>
         <div class="col-4">
-            <label for="numCostoInicial" class="form-label">Costo inicial</label>
-            <input [(ngModel)]="contratoActivo.costoInicial" class="form-control" type="number" name="costoInicial" id="numCostoInicial"  />
+            <label for="numCostoInicial" class="form-label">Depósito</label>
+            <input [attr.readonly]="data.tituloVentana === 'Detalles' ? true : null" [(ngModel)]="contratoActivo.costoInicial" class="form-control" type="number" name="costoInicial" id="numCostoInicial"  />
         </div>
         <div class="col-4">
-            <label for="numCostoPeriodo" class="form-label">Costo por periodo</label>
-            <input [(ngModel)]="contratoActivo.costoPeriodo" class="form-control" type="number" name="costoPeriodo" id="numCostoPeriodo"  />
+            <label for="numCostoPeriodo" class="form-label">Costo renta</label>
+            <input [attr.readonly]="data.tituloVentana === 'Detalles' ? true : null" [(ngModel)]="contratoActivo.costoPeriodo" class="form-control" type="number" name="costoPeriodo" id="numCostoPeriodo"  />
         </div>
 
         <div class="col-8">
             <h5>Información del Aval</h5>
             <label for="txtNombreAval" class="form-label">Nombre completo</label>
-            <input [(ngModel)]="contratoActivo.aval.nombre" class="form-control" type="text" name="aval.nombre" id="txtNombreAval"  />
+            <input [attr.readonly]="data.tituloVentana === 'Detalles' ? true : null" [(ngModel)]="contratoActivo.aval.nombre" class="form-control" type="text" name="aval.nombre" id="txtNombreAval"  />
         </div>
         <div class="w-100"></div>
         <div class="col-4">
             <label for="txtCorreoAval" class="form-label">Correo electrónico</label>
-            <input [(ngModel)]="contratoActivo.aval.correo" class="form-control" type="email" name="aval.correo" id="txtCorreoAval"  />
+            <input [attr.readonly]="data.tituloVentana === 'Detalles' ? true : null" [(ngModel)]="contratoActivo.aval.correo" class="form-control" type="email" name="aval.correo" id="txtCorreoAval"  />
         </div>
         <div class="col-4">
             <label for="txtTelefono1" class="form-label">Teléfono 1</label>
-            <input [(ngModel)]="contratoActivo.aval.telefono1" class="form-control" type="text" name="aval.telefono1" id="txtTelefono1"  />
+            <input [attr.readonly]="data.tituloVentana === 'Detalles' ? true : null" [(ngModel)]="contratoActivo.aval.telefono1" class="form-control" type="text" name="aval.telefono1" id="txtTelefono1"  />
         </div>
         <div class="col-4">
             <label for="txtTelefono2" class="form-label">Teléfono 2</label>
-            <input [(ngModel)]="contratoActivo.aval.telefono2" class="form-control" type="text" name="aval.telefono2" id="txtTelefono2"  />
+            <input [attr.readonly]="data.tituloVentana === 'Detalles' ? true : null" [(ngModel)]="contratoActivo.aval.telefono2" class="form-control" type="text" name="aval.telefono2" id="txtTelefono2"  />
         </div>
         
         <div class="col-12 d-flex justify-content-end">
-            <button (click)="CrearContrato()" class="btn btn-primary">Guardar</button>
-        </div>
+            <button *ngIf="data.tituloVentana === 'Nuevo Contrato'" (click)="CrearContrato()" class="btn btn-primary">Guardar</button>
+        </div>  
     </form>
 
 </div>
