Se cambiaron las ventanas modales de bootstrap por dialog de material. Se arregló para que se pudiera consultar contratos por fecha de cierre

--- a/frontend/src/app/componentes/contratos/contratos.component.html
+++ b/frontend/src/app/componentes/contratos/contratos.component.html
@@ -4,15 +4,15 @@
         <div class="btn-group  mb-2 mt-4" role="group" aria-label="Basic radio toggle button group">
             <input (click)="GetActivos()" type="radio" class="btn-check" name="radEstadoProp" id="radActivos" autocomplete="off" checked>
             <label class="btn btn-outline-primary" for="radActivos">Activos</label>
-            <input (click)="GetPorVencer()" type="radio" class="btn-check" name="radEstadoProp" id="radPorVencer" autocomplete="off">
-            <label class="btn btn-outline-primary" for="radPorVencer">Por vencer</label>
+            <!-- <input (click)="GetPorVencer()" type="radio" class="btn-check" name="radEstadoProp" id="radPorVencer" autocomplete="off">
+            <label class="btn btn-outline-primary" for="radPorVencer">Por vencer</label> -->
             <input (click)="GetArchivados()" type="radio" class="btn-check" name="radEstadoProp" id="radArchivados" autocomplete="off">
             <label class="btn btn-outline-primary" for="radArchivados">Archivados</label>
         </div>
     </div>
     <div class="col-2">
         <!-- <button id="btnAddContrato" (click)="NuevoContrato()" class="btn btn btn-primary btn-block" data-bs-toggle="modal" href="#modalAgregarContrato" role="button">Crear Contrato</button> -->
-        <button class="btn btn btn-primary btn-block" (click)="AbrirContratoDialog()">Crear contrato</button>
+        <button class="btn btn btn-primary btn-block" (click)="NuevoContrato()">Crear contrato</button>
     </div>
 </div>
 <div class="row">
@@ -32,7 +32,7 @@
               <tr *ngFor="let contr of contratos">
                 <td>{{ contr.noContrato }}</td>
                 <td>{{ contr.propiedad.direccion.calle + ', ' + contr.propiedad.direccion.ciudad }}</td>
-                <td>Inquilino</td>
+                <td>{{ contr.inquilino.contacto.nombre + ' ' + contr.inquilino.contacto.apellidos }}</td>
                 <td>{{ contr.fechaInicio | date:'dd/M/Y' }}</td>
                 <td>{{ contr.fechaCierre | date:'dd/M/y' }}</td>
                 <td>
