--- a/frontend/src/app/componentes/contratos/contratos.component.html
+++ b/frontend/src/app/componentes/contratos/contratos.component.html
@@ -4,14 +4,14 @@
         <div class="btn-group  mb-2 mt-4" role="group" aria-label="Basic radio toggle button group">
             <input (click)="GetActivos()" type="radio" class="btn-check" name="radEstadoProp" id="radActivos" autocomplete="off" checked>
             <label class="btn btn-outline-primary" for="radActivos">Activos</label>
-            <!-- <input (click)="GetPorVencer()" type="radio" class="btn-check" name="radEstadoProp" id="radPorVencer" autocomplete="off">
-            <label class="btn btn-outline-primary" for="radPorVencer">Por vencer</label> -->
             <input (click)="GetArchivados()" type="radio" class="btn-check" name="radEstadoProp" id="radArchivados" autocomplete="off">
             <label class="btn btn-outline-primary" for="radArchivados">Archivados</label>
         </div>
     </div>
     <div class="col-2">
-        <button *ngIf="authService.GetUsuario().rango >= authService.eRangos.editor" class="btn btn btn-primary btn-block" (click)="NuevoContrato()">Crear contrato</button>
+      <div class="d-grid d-flex justify-content-end">
+        <button *ngIf="authService.GetUsuario().rango >= authService.eRangos.editor" class="btn btn-primary align-self-start" (click)="NuevoContrato()">Crear contrato</button>
+      </div>
     </div>
 </div>
 <div class="row">
