--- a/frontend/src/app/componentes/contratos/contratos.component.html
+++ b/frontend/src/app/componentes/contratos/contratos.component.html
@@ -2,9 +2,11 @@
     <div class="col-10">
         <h1>Contratos</h1>
         <div class="btn-group  mb-2 mt-4" role="group" aria-label="Basic radio toggle button group">
-            <input (click)="GetActivos()" type="radio" class="btn-check" name="radEstadoProp" id="radActivos" autocomplete="off" checked>
+            <input (click)="GetTodos()" type="radio" class="btn-check radEstadoProp" name="radEstadoProp" id="radTodos" autocomplete="off" checked>
+            <label class="btn btn-outline-primary" for="radTodos">Todos</label>
+            <input (click)="GetActivos()" type="radio" class="btn-check radEstadoProp" name="radEstadoProp" id="radActivos" autocomplete="off">
             <label class="btn btn-outline-primary" for="radActivos">Activos</label>
-            <input (click)="GetArchivados()" type="radio" class="btn-check" name="radEstadoProp" id="radArchivados" autocomplete="off">
+            <input (click)="GetArchivados()" type="radio" class="btn-check radEstadoProp" name="radEstadoProp" id="radArchivados" autocomplete="off">
             <label class="btn btn-outline-primary" for="radArchivados">Archivados</label>
         </div>
     </div>
@@ -15,8 +17,8 @@
     </div>
 </div>
 <div class="row">
-    <div class="col border" style="background-color: white;">
-        <table class="table table-hover">
+    <div class="col border py-4" style="background-color: white;">
+        <table id="dtContratos" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-border row-border hover">
             <thead class="thead-light">
               <tr>
                 <th scope="col">N°</th>
@@ -24,7 +26,7 @@
                 <th scope="col">Inquilino</th>
                 <th scope="col">Fecha Inicio</th>
                 <th scope="col">Fecha Cierre</th>
-                <th scope="col">Opciones</th>
+                <th scope="col">Acciones</th>
               </tr>
             </thead>
             <tbody>
