--- a/frontend/src/app/componentes/dialogs/mantenimiento-dialog/mantenimiento-dialog.component.html
+++ b/frontend/src/app/componentes/dialogs/mantenimiento-dialog/mantenimiento-dialog.component.html
@@ -1,8 +1,4 @@
 <div class="container-fluid">
-    <!-- <div class="row">
-        <div class="col-8"></div>
-        <div (click)="NuevoMantenimiento()" class="col-4 d-flex justify-content-end"><button class="btn btn-primary">Nuevo mantenimiento</button></div>
-    </div> -->
     <div class="row">
         <div class="col-4">
             <h4>Nuevo mantenimiento</h4>
@@ -35,7 +31,7 @@
         </div>
         <div class="col-8">
             <h4>{{ data.tituloVentana }}</h4>
-            <table class="table table-hover">
+            <table id="dtMantenimientos" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-border row-border hover">
                 <thead class="thead-light">
                   <tr>
                     <th scope="col">Fecha</th>
@@ -51,7 +47,7 @@
                     <td>{{ mtto.costo }}</td>
                     <td>
                         <button (click)="VerMantenimiento(mtto._id)" class="btn btn-info btn-sm"><fa-icon [icon]="faEye"></fa-icon></button>
-                        <button (click)="EliminarMantenimiento(mtto._id)" class="btn btn-danger btn-sm mx-2"><fa-icon [icon]="faTrashAlt"></fa-icon></button>
+                        <button *ngIf="authService.GetUsuario().rango >= authService.eRangos.editor" (click)="EliminarMantenimiento(mtto._id)" class="btn btn-danger btn-sm mx-2"><fa-icon [icon]="faTrashAlt"></fa-icon></button>
                     </td>
                   </tr>
                 </tbody>
