--- a/frontend/src/app/componentes/inquilinos/inquilinos.component.html
+++ b/frontend/src/app/componentes/inquilinos/inquilinos.component.html
@@ -13,14 +13,14 @@
     </div>
 </div>
 <div class="row">
-    <div class="col border" style="background-color: white;">
-        <table class="table table-hover">
+    <div class="col border py-4" style="background-color: white;">
+        <table id="dtInquilinos" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-border row-border hover">
             <thead class="thead-light">
               <tr>
                 <th scope="col">Nombre</th>
                 <th scope="col">Correo electrónico</th>
                 <th scope="col">Teléfono</th>
-                <th scope="col">Acción</th>
+                <th scope="col">Acciones</th>
               </tr>
             </thead>
             <tbody>
@@ -31,7 +31,8 @@
                 <td>{{ inqui.contacto.telefono1 }} / {{ inqui.contacto.telefono2 }}</td>
                 <td>
                     <button (click)="VerInquilino(inqui._id)" class="btn btn-info btn-sm"><fa-icon [icon]="faEye"></fa-icon></button>
-                    <button *ngIf="authService.GetUsuario().rango >= authService.eRangos.editor" (click)="EliminarInquilino(inqui._id)" class="btn btn-danger btn-sm mx-2"><fa-icon [icon]="faTrashAlt"></fa-icon></button>
+                    <button (click)="VerEdoCuenta()" class="btn btn-secondary btn-sm mx-2"><fa-icon [icon]="faAddressCard"></fa-icon></button>
+                    <button *ngIf="authService.GetUsuario().rango >= authService.eRangos.editor" (click)="EliminarInquilino(inqui._id)" class="btn btn-danger btn-sm"><fa-icon [icon]="faTrashAlt"></fa-icon></button>
                 </td>
               </tr>
             </tbody>
