--- a/frontend/src/app/componentes/propiedades/propiedades.component.html
+++ b/frontend/src/app/componentes/propiedades/propiedades.component.html
@@ -2,7 +2,9 @@
     <div class="col-10">
         <h1>Propiedades</h1>
         <div class="btn-group  mb-2 mt-4" role="group" aria-label="Basic radio toggle button group">
-            <input (click)="GetDisponibles()" type="radio" class="btn-check" name="radEstadoProp" id="radDisponible" autocomplete="off" checked>
+            <input (click)="GetTodas()" type="radio" class="btn-check" name="radEstadoProp" id="radTodas" autocomplete="off" checked>
+            <label class="btn btn-outline-primary" for="radTodas">Todas</label>
+            <input (click)="GetDisponibles()" type="radio" class="btn-check" name="radEstadoProp" id="radDisponible" autocomplete="off">
             <label class="btn btn-outline-primary" for="radDisponible">Disponibles</label>
             <input (click)="GetRentadas()" type="radio" class="btn-check" name="radEstadoProp" id="radRentada" autocomplete="off">
             <label class="btn btn-outline-primary" for="radRentada">Rentadas</label>
@@ -13,8 +15,8 @@
     </div>
 </div>
 <div class="row">
-    <div class="col border" style="background-color: white;">
-        <table class="table table-hover">
+    <div class="col border py-4" style="background-color: white;">
+        <table id="dtPropiedades" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-border row-border hover">
             <thead class="thead-light">
               <tr>
                 <th scope="col">Predial</th>
@@ -26,11 +28,11 @@
             <tbody>
               <tr *ngFor="let prop of propiedades">
                 <td>{{ prop.predial }}</td>
-                <td>{{ prop.estadoRenta }}</td>
+                <td><span class="badge" [ngClass]="{'bg-success': prop.estadoRenta == 'Disponible', 'bg-warning': prop.estadoRenta == 'Rentada'}">{{ prop.estadoRenta }}</span></td>
                 <td>{{ prop.direccion.ciudad }}, {{ prop.direccion.estado }}</td>
                 <td>
                     <button (click)="VerPropiedad(prop)" class="btn btn-info btn-sm"><fa-icon [icon]="faEye"></fa-icon></button>
-                    <button *ngIf="authService.GetUsuario().rango >= authService.eRangos.editor" (click)="AbrirMtto(prop)" class="btn btn-warning btn-sm mx-2"><fa-icon [icon]="faTools"></fa-icon></button>
+                    <button (click)="AbrirMtto(prop)" class="btn btn-warning btn-sm mx-2"><fa-icon [icon]="faTools"></fa-icon></button>
                     <button *ngIf="authService.GetUsuario().rango >= authService.eRangos.editor" (click)="EliminarPropiedad(prop._id)" class="btn btn-danger btn-sm"><fa-icon [icon]="faTrashAlt"></fa-icon></button>
                 </td>
               </tr>
