Se afinaron todos los módulos, se terminó por completo la parte de los contratos. Cada contrato tiene su estado de cuenta, y por contrato se puede hacer remisiones y generar pagos que generan transacciones tipo cargo o abono que afectan el estado de cuenta del contrato.

--- a/frontend/src/app/componentes/contratos/contratos.component.html
+++ b/frontend/src/app/componentes/contratos/contratos.component.html
@@ -38,6 +38,7 @@
                 <td>{{ contr.fechaCierre | date:'dd/M/y' }}</td>
                 <td>
                     <button (click)="VerContrato(contr._id)" class="btn btn-info btn-sm"><fa-icon [icon]="faEye"></fa-icon></button>
+                    <button routerLink="/estado_cuenta/{{ contr.noContrato }}/{{ contr.tipo }}/{{ contr.costoPeriodo }}" class="btn btn-success btn-sm mx-2"><fa-icon [icon]="faFileInvoiceDollar"></fa-icon></button>
                 </td>
               </tr>
             </tbody>
