--- a/frontend/src/app/componentes/inquilinos/inquilinos.component.html
+++ b/frontend/src/app/componentes/inquilinos/inquilinos.component.html
@@ -31,8 +31,8 @@
                 <td>{{ inqui.contacto.telefono1 }} / {{ inqui.contacto.telefono2 }}</td>
                 <td>
                     <button (click)="VerInquilino(inqui._id)" class="btn btn-info btn-sm"><fa-icon [icon]="faEye"></fa-icon></button>
-                    <button (click)="VerEdoCuenta()" class="btn btn-secondary btn-sm mx-2"><fa-icon [icon]="faAddressCard"></fa-icon></button>
-                    <button *ngIf="authService.GetUsuario().rango >= authService.eRangos.editor" (click)="EliminarInquilino(inqui._id)" class="btn btn-danger btn-sm"><fa-icon [icon]="faTrashAlt"></fa-icon></button>
+                    <!-- <button (click)="VerEdoCuenta()" class="btn btn-secondary btn-sm mx-2"><fa-icon [icon]="faAddressCard"></fa-icon></button> -->
+                    <button *ngIf="authService.GetUsuario().rango >= authService.eRangos.editor" (click)="EliminarInquilino(inqui._id)" class="btn btn-danger btn-sm mx-2"><fa-icon [icon]="faTrashAlt"></fa-icon></button>
                 </td>
               </tr>
             </tbody>
