--- a/frontend/src/app/componentes/dialogs/mantenimiento-dialog/mantenimiento-dialog.component.html
+++ b/frontend/src/app/componentes/dialogs/mantenimiento-dialog/mantenimiento-dialog.component.html
@@ -44,7 +44,7 @@
                   <tr *ngFor="let mtto of mantenimientos">
                     <td>{{ mtto.fecha | date:'dd/M/Y' }}</td>
                     <td>{{ mtto.descripcion }}</td>
-                    <td>{{ mtto.costo }}</td>
+                    <td>{{ mtto.costo | currency: 'MXN' }}</td>
                     <td>
                         <button (click)="VerMantenimiento(mtto._id)" class="btn btn-info btn-sm"><fa-icon [icon]="faEye"></fa-icon></button>
                         <button *ngIf="authService.GetUsuario().rango >= authService.eRangos.editor" (click)="EliminarMantenimiento(mtto._id)" class="btn btn-danger btn-sm mx-2"><fa-icon [icon]="faTrashAlt"></fa-icon></button>
