--- a/frontend/src/app/componentes/estado-cuenta/estado-cuenta.component.html
+++ b/frontend/src/app/componentes/estado-cuenta/estado-cuenta.component.html
@@ -10,7 +10,7 @@
 </div>
 <div class="row">
     <div class="col border py-4" style="background-color: white;">
-        <table id="dtRemisiones" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-border row-border hover">
+        <table id="dtRemisiones" datatable data-ordering="false" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-border row-border hover">
             <thead class="thead-light">
               <tr>
                 <th scope="col">Fecha</th>
@@ -28,7 +28,10 @@
                 <td><ng-container *ngIf="tra.tipo == 'cargo'">{{ tra.monto | currency: 'MXN' }}</ng-container></td>
                 <td><ng-container *ngIf="tra.tipo == 'abono'">{{ tra.monto | currency: 'MXN' }}</ng-container></td>
                 <td>{{ tra.saldo | currency: 'MXN' }}</td>
-                <td><a *ngIf="tra.tipo == 'cargo'" href="#">Ver adjunto</a></td>
+                <td>
+                  <a *ngIf="tra.tipo == 'cargo' && tipoContrato == false" href="{{ tra.adjuntoId }}">Ver adjunto</a>
+                  <ng-container *ngIf="tipoContrato == true">{{ tra.adjuntoId }}</ng-container>
+                </td>
               </tr>
             </tbody>
         </table>
